testsuite/tests/properties/invalid_new_node/not_memoized/test.lkt
from common import EmptyNode, FooNode, Literal

class LiteralList: ASTList[Literal] {
    fun prop(): EmptyNode = EmptyNode()
}
